# cpp-go

./: .gitignore  CMakeLists.txt  setup.py
cmake/: googletest.cmake
src/: CMakeLists.txt
src/cppgo/: CMakeLists.txt  features.cpp  features.hpp  main.cpp  miscs.cpp  miscs.hpp
src/cppgo_impl/: CMakeLists.txt  chain.cpp  chain.hpp  chain_group.cpp  chain_group.hpp  color.hpp  features.hpp  move.cpp  move.hpp  neighbor_counter.cpp  neighbor_counter.hpp  state.cpp  state.hpp  state_impl.cpp  state_impl.hpp  zobrist_hash.cpp  zobrist_hash.hpp
tst/: CMakeLists.txt
tst/cppgo_impl/: CMakeLists.txt  test_chain.cpp  test_chain_group.cpp  test_features.cpp  test_move.cpp  test_neighbor_counter.cpp  test_state.cpp  test_state_impl.cpp  test_zobrist_hash.cpp
